--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -125,7 +125,9 @@ body{
 /*View Mobile */
 
 @media (max-width: 376px) {
-    
+    body{
+        height: 80vh;
+    }
     .contenedor{
         height: 70vh;
         width: 90vw;
@@ -162,7 +164,7 @@ body{
     }
 
     .cuerpo{
-        font-size: 3rem;
+        font-size: 2.5rem;
         line-height: 3rem;
         margin-top: 3rem;
     }
@@ -173,6 +175,7 @@ body{
 
     .contenedor{
         min-width: 370px;
+        height: 70vh;
     }
     
     .cabecera form .inputs input{
@@ -183,6 +186,7 @@ body{
 
     .cuerpo{
         font-size: 3.5rem;
+        line-height: 5rem;
     }
 
     .boton button{
