--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -164,9 +164,13 @@ body{
     }
 
     .cuerpo{
-        font-size: 2.5rem;
+        font-size: 3rem;
         line-height: 3rem;
         margin-top: 3rem;
+    }
+
+    .cuerpo span{
+        font-size: 2.5rem;
     }
 }
 
@@ -187,6 +191,10 @@ body{
     .cuerpo{
         font-size: 3.5rem;
         line-height: 5rem;
+    }
+
+    .cuerpo span{
+        font-size: 3rem;
     }
 
     .boton button{
